Gtk+-3.20 BlueMenta: fix jumping list-rows

--- a/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
@@ -5521,48 +5521,57 @@ list,
 }
 
 list row,
+list row.activatable,
 .list-row {
     padding: 2px;
     transition: all 200ms ease-in;
-	background-image: none;
-	background-color: @theme_base_color;
+    background-image: none;
+    background-color: @theme_base_color;
 }
 
 list row:hover,
+list row.activatable:hover,
 .list-row:hover {
-	background-image: none;
-	background-color: shade (@theme_selected_bg_color, 1.55);
-	color: shade (@theme_selected_bg_color, 0.35);
+    padding: 2px;
+    background-image: none;
+    background-color: shade (@theme_selected_bg_color, 1.55);
+    color: shade (@theme_selected_bg_color, 0.35);
 }
 
 list row:selected,
 list row:selected:hover,
+list row.activatable:selected,
+list row.activatable:selected:hover,
 .list-row:selected,
 .list-row:selected:hover {
-	border-width: 0;
-	border-style: solid;
-	border-color: shade (@theme_selected_bg_color, 0.85);
-	background-color: @theme_selected_bg_color;
-	background-image: linear-gradient(to bottom,
-		shade (@theme_selected_bg_color, 1.0),
-		shade (@theme_selected_bg_color, 0.85));
-	box-shadow: none;
-	color: @theme_selected_fg_color;
+    padding: 2px;
+    border-width: 0;
+    border-style: solid;
+    border-color: shade (@theme_selected_bg_color, 0.85);
+    background-color: @theme_selected_bg_color;
+    background-image: linear-gradient(to bottom,
+                                      shade (@theme_selected_bg_color, 1.0),
+                                      shade (@theme_selected_bg_color, 0.85));
+    box-shadow: none;
+    color: @theme_selected_fg_color;
 }
 
 list row:selected:backdrop,
 list row:selected:backdrop:hover,
+list row.activatable:selected:backdrop,
+list row.activatable:selected:backdrop:hover,
 .list-row:selected:backdrop,
 .list-row:selected:backdrop:hover {
-	border-width: 0;
-	border-style: solid;
-	border-color: shade (@theme_bg_color, 0.85);
-	background-image: linear-gradient(to bottom,
-		shade (@theme_selected_bg_color, 0.94),
-		shade (@theme_selected_bg_color, 0.94));
-	color: @theme_fg_color;
-	text-shadow: none;
-	box-shadow: none;
+    padding: 2px;
+    border-width: 0;
+    border-style: solid;
+    border-color: shade (@theme_bg_color, 0.85);
+    background-image: linear-gradient(to bottom,
+                                      shade (@theme_selected_bg_color, 0.94),
+                                      shade (@theme_selected_bg_color, 0.94));
+    color: @theme_fg_color;
+    text-shadow: none;
+    box-shadow: none;
 }
 
 list row button,
